--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chromedriver": "^2.37.0",
+    "geckodriver": "^1.11.0",
     "selenium-webdriver": "^4.0.0-alpha.1"
   }
 }
